--- a/src/Microsoft.Extensions.Caching.MongoDB/Microsoft.Extensions.Caching.MongoDB.csproj
+++ b/src/Microsoft.Extensions.Caching.MongoDB/Microsoft.Extensions.Caching.MongoDB.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="$(MicrosoftExtensionsOptionsPackageVersion)" />
-    <PackageReference Include="MongoDB.Driver" Version="$(MongoDBDriverPackageVersion)" />
+    <PackageReference Include="MongoDB.Driver.signed" Version="$(MongoDBDriverPackageVersion)" />
   </ItemGroup>
 
 </Project>
