Added first unit test.

--- a/test/Microsoft.Extensions.Caching.MongoDB.Tests/Microsoft.Extensions.Caching.MongoDB.Tests.csproj
+++ b/test/Microsoft.Extensions.Caching.MongoDB.Tests/Microsoft.Extensions.Caching.MongoDB.Tests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(MicrosoftExtensionsDependencyInjectionPackageVersion)" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
 </Project>
