Changed artifact and project name to the non official one

--- a/test/Microsoft.Extensions.Caching.MongoDB.Tests/Microsoft.Extensions.Caching.MongoDB.Tests.csproj
+++ b/test/Microsoft.Extensions.Caching.MongoDB.Tests/Microsoft.Extensions.Caching.MongoDB.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Microsoft.Extensions.Caching.MongoDB\Microsoft.Extensions.Caching.MongoDB.csproj" />
+    <ProjectReference Include="..\..\src\Microsoft.Extensions.Caching.MongoDB\MarkCBB.Extensions.Caching.MongoDB.csproj" />
   </ItemGroup>
 
   <ItemGroup>
