--- a/src/Microsoft.Extensions.Caching.MongoDB/MarkCBB.Extensions.Caching.MongoDB.csproj
+++ b/src/Microsoft.Extensions.Caching.MongoDB/MarkCBB.Extensions.Caching.MongoDB.csproj
@@ -16,7 +16,9 @@ This implementation is based on the official made by Microsoft for SqlServer and
     <RepositoryUrl>https://github.com/MarkCBB/Caching</RepositoryUrl>
     <PackageIconUrl>https://www.nuget.org/Content/gallery/img/default-package-icon.svg</PackageIconUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>This is the release candidate.</PackageReleaseNotes>
+    <PackageReleaseNotes>This release adds the feature to check and remove the expired values in each request.
+    By default is disabled and is possible to enable it setting the DeleteOldValues flag to true.
+    Is not recommended to enable this feature as is more performant to rely in the TTL index built-in MongoDB.</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
