--- a/test/Microsoft.Extensions.Caching.MongoDB.Tests/Microsoft.Extensions.Caching.MongoDB.Tests.csproj
+++ b/test/Microsoft.Extensions.Caching.MongoDB.Tests/Microsoft.Extensions.Caching.MongoDB.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(MicrosoftExtensionsDependencyInjectionPackageVersion)" />
+    <PackageReference Include="MongoDB.Driver.signed" Version="$(MongoDBDriverPackageVersion)" />
   </ItemGroup>
 
 </Project>
